src/include/frag.h
@@ -579,7 +579,6 @@ public:
   }
   void insert(frag_t f) {
     _set.insert(f);
-    simplify();
   }
 
   void simplify() {
